@@ -49,6 +49,7 @@
 	flash9 : fixed Xml.nodeValue for comments (does not include <!--/-->)
 	all : added named local functions (allow self-recursion)
 	all : use left-assoc for (==,!=,>,>=,<,<=)(==,!=,>,>=,<,<=) (&&)(&&) and (||)(||)
+	all : give prefix unary operators higher priority than ?:
 
 2010-08-14: 2.06
 	neko : change serializer to be able to handle instances of basic classes from other modules
